--- a/B1.html
+++ b/B1.html
@@ -4,6 +4,6 @@
     <title>Git experience branch1</title>
   </head>
   <body>
-    <h1>GitHub repository branch1 </h1>
+    <h1>GitHub branch1 </h1>
   </body>
 </html>
